syntax = "proto3";

package world;

import "common.proto";

service WorldService {
    rpc getWorld (GetWorldRequest) returns (GetWorldResponse);
    rpc createWorld (CreateWorldRequest) returns (CreateWorldResponse);
    rpc updateWorld (UpdateWorldRequest) returns (UpdateWorldResponse);
    rpc deleteWorld (DeleteWorldRequest) returns (DeleteWorldResponse);
    rpc search (SearchWorldRequest) returns (SearchWorldResponse);
    rpc dropWorldContent (DropWorldContentRequest) returns (DropWorldContentResponse);
    rpc loadWorldPreset (LoadWorldPresetRequest) returns (LoadWorldPresetResponse);
}

message UpdateWorldRequest {
    common.WorldDTO world = 1;
}

message UpdateWorldResponse {
    common.WorldDTO world = 1;
}

message CreateWorldRequest {
    common.WorldDTO world = 1;
}

message CreateWorldResponse {
    common.WorldDTO world = 1;
}

message GetWorldRequest {
    string worldId = 1;
}

message GetWorldResponse {
    common.WorldDTO world = 1;
}

message GetWorldsForUserRequest {
    string userId = 1;
}

message GetWorldsForUserResponse {
    repeated common.WorldDTO worlds = 1;
}

message DeleteWorldRequest {
    string worldId = 1;
}

message DeleteWorldResponse {
    // No fields required for a 200 status response
}

message DropWorldContentRequest {
    string worldId = 1;
}

message DropWorldContentResponse {
    // No fields required for a 200 status response
}

message LoadWorldPresetRequest {
    common.PresetEnumDTO preset = 1;
    common.ContextDTO context = 2;
}

message LoadWorldPresetResponse {
    // No fields required for a 200 status response
}

message SearchWorldRequest {
    string entityName = 1;
    common.SearchQueryDTO query = 2;
    common.ContextDTO context = 3;
}


message SearchWorldResponse {
    repeated common.WorldDTO worlds = 1;
    int32 totalResults = 2;
    int32 totalPages = 3;
    int32 currentPage = 4;
}